[package]
name = "heddle-client"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Heddle hosted-backend client: auth, support, presence, the gRPC client wrappers, and the global credential store."
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
anyhow.workspace = true
base64.workspace = true
biscuit-auth.workspace = true
chrono.workspace = true
futures.workspace = true
hex.workspace = true
prost.workspace = true
prost-types.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
sley.workspace = true
tempfile.workspace = true
tokio = { workspace = true }
tokio-stream.workspace = true
tokio-tungstenite.workspace = true
toml.workspace = true
tonic.workspace = true
tracing.workspace = true

# Workspace heddle crates — sibling paths plus crates.io versions so
# downstream consumers (closed weft, third parties) pull the published
# matching versions from the registry.
cli-shared = { path = "../cli-shared", package = "heddle-cli-shared", version = "0.10" }
crypto = { path = "../crypto", package = "heddle-crypto", version = "0.10" }
grpc = { path = "../grpc", package = "heddle-grpc", version = "0.13" }
objects = { path = "../objects", package = "heddle-objects", version = "0.10" }
wire = { path = "../wire", package = "heddle-wire", version = "0.10", default-features = false }
refs = { path = "../refs", package = "heddle-refs", version = "0.10" }
repo = { path = "../repo", package = "heddle-repo", version = "0.10", default-features = false, features = ["git-overlay", "native"] }
weft-client-shim = { path = "../weft-client-shim", package = "weft-client-shim", version = "0.10" }

[dev-dependencies]
tempfile.workspace = true

[lib]
path = "src/lib.rs"
