[package]
name = "heddle-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
cli-shared = { path = "../cli-shared", package = "heddle-cli-shared", version = "0.10" }
crypto = { path = "../crypto", package = "heddle-crypto", version = "0.10" }
ignore.workspace = true
objects = { path = "../objects", package = "heddle-objects", version = "0.10" }
oplog = { path = "../oplog", package = "heddle-oplog", version = "0.10", default-features = false }
refs = { path = "../refs", package = "heddle-refs", version = "0.10" }
repo = { path = "../repo", package = "heddle-repo", version = "0.10" }
rmp-serde.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
semantic = { path = "../semantic", package = "heddle-semantic", version = "0.10", optional = true }
sley.workspace = true

[features]
default = []
semantic = ["dep:semantic", "repo/tree-sitter-symbols"]
semantic-extended = ["semantic", "semantic?/extended-languages"]

[dev-dependencies]
tempfile.workspace = true

[lib]
path = "src/lib.rs"
name = "heddle_core"
