[package]
name = "heddle-format"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
thiserror.workspace = true
zstd = { workspace = true, optional = true }

[features]
bench = ["zstd"]
zstd = ["dep:zstd"]

[lib]
path = "src/lib.rs"
name = "heddle_format"
