[package]
name = "heddle-git-substrate"
version = "0.2.4"
edition.workspace = true
authors.workspace = true
description = "gix↔sley translation layer for Heddle git operations"
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
sley-core.workspace = true
sley-config.workspace = true
sley-fetch.workspace = true
sley-formats.workspace = true
sley-index.workspace = true
sley-notes.workspace = true
sley-object.workspace = true
sley-odb.workspace = true
sley-pack.workspace = true
sley-protocol.workspace = true
sley-remote = { workspace = true, features = ["http", "ssh"] }
sley-refs.workspace = true
sley-rev.workspace = true
sley-transport.workspace = true
sley-worktree.workspace = true
libc.workspace = true
reqwest = { workspace = true, features = ["blocking", "rustls-no-provider"] }
rustls.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lib]
path = "src/lib.rs"
name = "git_substrate"