[package]
name = "heddle-grpc"
version = "0.7.0"
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
build = "build.rs"

[dependencies]
prost.workspace = true
prost-types.workspace = true
tonic.workspace = true
tonic-prost.workspace = true

[build-dependencies]
protoc-bin-vendored.workspace = true
tonic-prost-build.workspace = true

[lib]
path = "src/lib.rs"
name = "grpc"
