[package]
name = "heddle-grpc"
version = "0.7.1"
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
build = "build.rs"

[dependencies]
prost.workspace = true
prost-types.workspace = true
tonic.workspace = true
tonic-prost.workspace = true

[build-dependencies]
protoc-bin-vendored.workspace = true
tonic-prost-build.workspace = true

# prost, prost-types, and tonic-prost are consumed by code emitted via
# `tonic::include_proto!` so they don't appear in source. protoc-bin-vendored
# and tonic-prost-build are used by build.rs above.
[package.metadata.cargo-machete]
ignored = ["prost", "prost-types", "tonic-prost", "protoc-bin-vendored", "tonic-prost-build"]

[lib]
path = "src/lib.rs"
name = "grpc"
