[package]
name = "heddle-merge"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
path = "src/lib.rs"
name = "merge"

[dependencies]
similar.workspace = true
