[package]
name = "heddle-merge"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
path = "src/lib.rs"
name = "merge"

[dependencies]
anyhow.workspace = true
heddle-format = { path = "../format", version = "0.8" }
objects = { path = "../objects", package = "heddle-objects", version = "0.8" }
similar.workspace = true
tracing.workspace = true

[dev-dependencies]
objects = { path = "../objects", package = "heddle-objects", version = "0.8", features = ["memory-backend"] }
