[package]
name = "heddle-mount"
version = "0.2.0"
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
bytes.workspace = true
libc.workspace = true
objects = { path = "../objects", package = "heddle-objects", version = "0.2" }
refs = { path = "../refs", package = "heddle-refs", version = "0.2" }
repo = { path = "../repo", package = "heddle-repo", version = "0.2" }
thiserror.workspace = true
tracing.workspace = true

# `fuser` provides the FUSE bindings on Linux. Gated behind the
# `fuse` feature so the crate still builds (without a mountable
# shell) on macOS/Windows. The crate itself is target-gated to
# Linux, so on other platforms the dep is a no-op even if the
# feature is on by accident.
[target.'cfg(target_os = "linux")'.dependencies]
fuser = { version = "0.17", optional = true }

[dev-dependencies]
chrono.workspace = true
oplog = { path = "../oplog", package = "heddle-oplog" }
proptest.workspace = true
tempfile.workspace = true

[features]
default = []
# Enable the FUSE shell. Linux-only; on other platforms the
# `FuseShell` type and its module simply don't compile in.
fuse = ["dep:fuser"]
# Enable the FSKit shell. macOS-only (15.4+); on other platforms
# the `FSKitShell` type and its module simply don't compile in.
# The build.rs picks this feature up on macOS to compile the
# Swift adapter at `swift/HeddleFSKit/` into a static lib and
# link it. The C ABI is declared once in `src/fskit/c_abi.rs`;
# `cbindgen` regenerates the Swift bridging header from it at
# build time.
fskit = ["dep:cbindgen"]

[build-dependencies]
# `cbindgen` regenerates the FSKit Swift bridging header from the
# Rust C-ABI module (`src/fskit/c_abi.rs`) so a callback added in
# Rust automatically propagates to Swift, and a mismatch becomes a
# `swiftc` compile error rather than runtime UB. Gated behind the
# `fskit` feature: Linux builds (the common case) skip the dep
# entirely, and `--all-features` on Linux still compiles cleanly
# because the build-script no-ops on non-macOS targets.
cbindgen = { version = "0.29", default-features = false, optional = true }

[lib]
path = "src/lib.rs"
name = "mount"
